--- a/style.css
+++ b/style.css
@@ -1,114 +1,227 @@
-
 *{
-   padding: 0%;
-   margin: 0%;
+    padding: 0%;
+    margin: 0%;
 }
-.grid-container{
-    display: grid;
-     grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
-     grid-template-rows: 1fr 1fr 1fr;
-    grid-gap: 10px;
-    border: 2px solid black;
+h1{
+    color: rgb(25, 230, 59); 
+    font-size: 30px;
+    
+}
+.container p{
+    background-color: aqua;
+    padding: 5px;
+     font: size 25px;
+
+}
+section h2{
+    color: blueviolet;
+    font-family: large;
+}
+.note{
+    border: 1px solid ;
     padding: 10px;
+}
+section p{
+    margin: 10px;
+}
+.sum h3+p{
+    background-color: blanchedalmond;
+    color: brown;
+    padding: 10px;
+}
+.menu li{
+    background-color: black;
+    color: white;
+    padding: 10px;
+    border-bottom:2px solid;
+    font-size: medium;
+    
+}
+ul{
+ display: flex;
+ flex-direction: column;
+ gap: 4px;
+}
+.box{
+    background-color: rgb(155, 243, 14);
+    /* border: thick; */
+    border-radius: 50px;
+    margin: 10px;
+    padding: 10px;
+    width: 250px;
+    height: 50px;
+    text-align: center;    
+}
+.highlight,#special{
+    background: rgb(189, 148, 115);
+    border: solid;
+    font-size: 30px;
+    border-radius: 20px;
+    text-align: center;
+}
+.content :nth-child(1){
+    border-bottom: 2px double;
+    color: purple;
+    font-size: 30px;
+}
+.a{
+ color: red;
+ text-decoration: none;
+ padding: 10px;
+ background-color: rgb(183, 220, 235);
+
+}
+.div{
+    margin:20px;
+}
+.div a{
+    text-decoration: none;
+     margin-left: 10px;
+}
+.div a[title]{
+    padding: 5px;
+   
+}
+
+.alert-box {
+    background-color: red;
+    border: thick;
+    padding: 10px;
+    border-radius: 20px;
+    width:300px;
+}
+.info p{
+    background-color:lightcoral;
+    border: 10px;
+    padding: 10px;
+    margin: 10px;
+}
+.info h4{
+    border-bottom: 2px solid;
+    width: 75px;
+}
+.profile :nth-child(2){
+    background-color: lightgreen;
+    padding: 10px;
+}
+.status {
+    color: green;
+    font-weight: bold;
+    border: 2px solid red;
+}
+.profile p{
+   margin-bottom: 20px;
+}
+
+article :nth-child(2) {
+    padding: 5px;
+    color: orange;
+
+}
+article :last-child{
+    padding: 5px;
+    color: rgb(221, 19, 154);
+}
+article h3{
+    background-color: aqua;
+   font-style: italic ;
+   border-bottom: 2px solid;
+}
+.nav{
+    background-color: yellow;
+    border: 1px solid;
+    padding: 5px;
+    font-size: 20px;
+}
+.nav li{
+    margin: 10px;
+    list-style: ;
+
+}
+.nav  :last-child{
+    color: red;
+}
+.notice h2{
+    text-transform: uppercase;
+    color: blue;
+    word-spacing: 10px;
+}
+.notice p{
+    background-color: lightcoral;
+    padding: 5px;
+    border-radius: 20px;
+}
+.notice small{
+    color: gray;
+    font-style: italic;
+    margin-left: 20px;
+}
+.faq h3{
+    border: double;
+}
+.faq :nth-child(2){
+    background-color: blueviolet;
+}
+.faq :nth-child(4){
     background-color: blue;
-   }
-   .bio{
-      display: grid;
-      border: 2px solid rgb(12, 2, 2);
-          background-color: black;
-      color: white  ;
-          gap: 10px;
-   }
-  
-.one{
-   grid-column: 1/3;
-   grid-row: 1/2;
-   padding: 10px;
 }
-.one h3{
-  text-align: center;
-  justify-content: center;
-  align-content: center;
-  font-size: 20px;
+.faq p{
+    padding: 5px;
+    margin: 5px;
 }
-.two{
-      grid-column:3/4;
-   grid-row: 1/2
+.labels .tag{
+    font-weight: bold;
+    background-color: black;
+    color: white;
+    padding: 10px;
+    border-radius: 20px;
 }
-.three{
-      grid-column:4/5;
-   grid-row:1/3;
+.labels{
+    margin-top: 25px;
+    margin:20px;
 }
-   .three .i{
-      background-color: white;
-      border-radius:50px;
-      width: 50px;
-      height: 50px;      
-   }
-   .div-2{
-      display: flex;
-      justify-content: space-evenly;
-  }
-  .three .div{
-    font-size: 15px;
-  }
-.four{
-      grid-column:5/6;
-        grid-row: 1/3;
+span{
+    background-color: red;
+    color:white;
 }
-.five{
-      grid-column:6/7;
-   grid-row: 1/2;
+.gallery{
+    padding: 05px;
+    border: 2px solid;
 }
-.five{
- 
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   flex-direction: column;
-   position: relative;
+.gallery h4{
+    color: lightgreen;
+    text-decoration: underline;
 }
-.five h2{
-   position: absolute;
-   top: 0;
+.gallery p{
+    background-color: bisque;
+    font-size: 20px;
+    padding: 5px;
 }
-
-
-.six{
-      grid-column:1/4;
-   grid-row: 2/4;
-  
-   align-items: center;
-   justify-content: center;
-   font-size: 50px;
+.summary{
+    padding: 5px;
+    margin: 5px;
+    border: 1px solid;
 }
-.seven{
-      grid-column:4/5;
-   grid-row: 3/4;
-   display: flex;
-   justify-content: center;
-   align-items: center;
-   font-size: 40px
+.note {
+    border: 2px dashed;
+    background-color: blueviolet;
 }
-.eight{
-grid-column:5/7;
-   grid-row: 3/4;
-   padding:10px;
-   font-size: 20px;
+.summary h3{
+    font-size: 20px;
+    font-weight: bold;
 }
-.frog{
-   font-size: 10px;
+.lead{
+    font-size: 20px;
+    font-weight: bold;
+    background-color: black;
+    color: white;
 }
-.nine{
-   grid-column:6/7;
-   grid-row: 2/3;
-   display: flex;
-   align-items: center;
-   justify-content: center;
-   flex-direction: column;
-   position: relative;
+.bio :nth-child(2){
+    border: 1px solid;
+    padding: 5px;
+    margin:2px
 }
-.nine h3{
-   position: absolute;
-   top: 0;
+.bio :nth-child(3){
+    font-style: italic;
+    color: rgb(48, 12, 250)
 }
